
      \item New \code{Summary()} group method for class \code{"ordered"}
      implements \code{min()}, \code{max()} and \code{range()} for
      ordered factors.

      \item \code{`mostattributes<-`} now consults the \code{"dim"}
      attribute and not the \code{dim()} function, making it more useful
      for objects (such as data frames) from classes with methods for
      \code{dim()}.  (Related to \PR{14469}.)

      \item There is a new option \code{"browserNLdisabled"} to disable
      the use of an empty (e.g. via the \sQuote{Return} key) as a synonym
      for \code{c} in \code{browser()} or \code{n} under \code{debug()}.
      (Wish of \PR{14472}.)

      \item \code{example()} gains optional new arguments
      \code{character.only} and \code{give.lines} enabling programmatic
      exploration.

      \item \code{serialize()} and \code{unserialize()} are no longer
      described as \sQuote{experimental}.  The interface is now regarded
      as stable, although the serialization format may well change in
      future releases.  (\code{serialize()} has a new argument
      \code{version} which would allow the current format to be written
      if that happens.)

      New functions \code{saveRDS()} and \code{readRDS()} are public
      versions of the \sQuote{internal} functions \code{.saveRDS()} and
      \code{.readRDS()} made available for general use.  The dot-name
      versions remain available as several package authors have made use
      of them, despite the documentation.

      \code{saveRDS()} supports \code{compress = "xz"}.

      \item Many functions when called with a not-open connection will
      now ensure that the connection is left not-open in the event of
      error.  These include \code{read.dcf()}, \code{dput()},
      \code{dump()}, \code{load()}, \code{parse()}, \code{readBin()},
      \code{readChar()}, \code{readLines()}, \code{save()},
      \code{writeBin()}, \code{writeChar()}, \code{writeLines()},